# AIAgents-Clone

./: .dockerignore  .env.example  .gitignore  .vercelignore  AGENT_STATUS.md  DEMO_GUIDE.md  Dockerfile  GMAIL_QUICKSTART.md  Makefile  QUICK_DEPLOY.md  README.md  alembic.ini  build.sh  devcontainer.json  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  run_gmail_agent.sh  start_api.sh  test.sh  vercel.json
.github/workflows/: inject-demo-key.yml  lighthouse-nightly.yml  optimize-images.yml  site-smoke-a11y.yml  vercel-deploy.yml
.github/workflows/backups/: ci.yml.bak  inject-demo-key.yml.bak  lighthouse-nightly.yml.bak  optimize-images.yml.bak  site-smoke-a11y.yml.bak  vercel-deploy.yml.bak
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py  001_add_multi_tenant_support.sql
app/: README_DEPRECATED.md
app/admin/: page.tsx
app/admin/clients/[id]/: page.tsx
app/api/generate/brief/: route.ts
app/api/generate/proposal/: route.ts
app/api/intake/: route.ts
app/intake/: page.tsx
app/intake/components/: IntakeForm.tsx
apps/agency-web/: README.md  README_RUN.md  next.config.js  package.json
apps/agency-web/app/admin/: page.tsx
apps/agency-web/app/admin/components/: AdminLogin.tsx  Generators.tsx
apps/agency-web/app/api/admin/login/: route.ts
apps/agency-web/app/api/intake/: route.ts
apps/agency-web/app/intake/components/: IntakeForm.tsx
docs/: ACCESSIBILITY.md  API_GUIDE.md  ARCHITECTURE_AGENCY.md  GMAIL_CLEANUP_ARCHITECTURE.md  GMAIL_SETUP.md  PHASE_7_REAL_API_INTEGRATION.md  PRODUCTION_READINESS_GAPS.md  SMOKE_TEST_RESULTS.md  VERCEL_SETUP.md  WEEK_1_SUMMARY.md  WORKER_SETUP.md
docs/guides/: BUSINESS_AGENTS.md  DEMO_GUIDE.md  DEPLOYMENT.md  FREE_STACK_ENABLEMENT.md  FULL_STACK_ROLLOUT_CHECKLIST.md  GET_STARTED.md  GMAIL_QUICKSTART.md  QUICK_DEPLOY.md  README.md  TAWK_SETUP.md  analytics-setup.md
examples/: README.md  agent_templates.py  appointment_booking_agent.py  customer_service_chatbot_agent.py  dashboard_demo.py  data_processing_agent.py  database_persistence.py  email_social_automation_agent.py  gmail_cleanup_agent.py  memory_agent.py  rate_limiting.py
prisma/: README.md  schema.prisma
prisma/migrations/: 0001_init.sql
scripts/: migrate.py  migrate_db.py  migrate_gmail_db.py  run_gmail_cleanup.py  start_worker.sh
src/: config.py  rate_limiting.py  templates.py
src/api/: __init__.py  auth.py  demo.py  gmail_cleanup.py  main.py  rest.py
src/api/routers/: gmail_cleanup.py
src/application/: gmail_cleanup_use_cases.py  orchestrator.py
src/application/services/: inbox_hygiene_service.py
src/application/use_cases/: __init__.py  gmail_cleanup.py
src/client_config/: mapping.py  models.py
src/domain/: cleanup_policy.py  cleanup_rule_builder.py  customer.py  email_thread.py  memory.py  metrics.py  models.py
src/infrastructure/: dashboard.py  db.py  db_repositories.py  gmail_client.py  gmail_persistence.py  healthchecks.py  llm_providers.py  memory_repository.py  message_queue.py  models_sql.py  observability.py  qdrant_client.py  repositories_sql.py  supabase_client.py
src/tools/: gmail.py
src/types/: clientConfig.ts
src/validation/: clientConfig.ts  intakeForm.ts
src/workers/: celery_app.py  tasks.py
tests/: conftest.py  test_gmail_api_integration.py  test_integration_gmail_cleanup.py  test_site_build.py  test_smoke_gmail_cleanup.py
tools/: generate_lighthouse_badge.py
website/: .htmlvalidate.json  config.example.js  config.js.template  index-old.html  index.html  landing.html  platform.html  pricing.html  solutions.html
(+2 files in other folders)
